# blitzy-20250603112937552

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications_b3815ee7-12a2-46a4-a950-4b8e72ef8030.md
infrastructure/docker/: .dockerignore  Dockerfile  docker-compose.yml
src/backend/: .env.example  .gitignore  README.md  app.js  app.py  jest.config.js  package.json  pytest.ini  requirements.txt  server.js  wsgi.py
src/backend/tests/: app.test.js  server.test.js  test_app.py  test_wsgi.py
